# double-pendulum-simulation

./: .gitignore  LICENSE  README.md  double-pendulum-simulation.cabal  stack.yaml
app/: Constants.hs  Main.hs  View.hs
src/: DoublePendulum.hs  RungeKutta.hs
