name:                double-pendulum-simulation
version:             0.1.0.0
homepage:            https://github.com/lotz84/double-pendulum-simulation#readme
license:             BSD3
license-file:        LICENSE
author:              Tatsuya Hirose
maintainer:          tatsuya.hirose.0804@gmail.com
copyright:           2017 Tatsuya Hirose
category:            Physics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RungeKutta
                     , DoublePendulum
  build-depends:       base >= 4.7 && < 5
                     , vector-space
  default-language:    Haskell2010

executable double-pendulum-simulation-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Constants
                     , View
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , double-pendulum-simulation
                     , gloss
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lotz84/double-pendulum-simulation
